# tds-2025-project2

./: .gitignore  LICENSE  dev.sh  output.txt  prompts.txt  pyproject.toml  question.txt  questions.txt  render.yaml  requirements.txt  sales_data.csv  start.sh  test.py  test.sh  test_api.py  test_api.sh  uvicorn_config.py
api/: index.py
src/tds_project2_2025/: __init__.py
test_data/analytics/datasets/sample_data/: customer_metrics.json
