[project]
name = "tds-project2-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "21f1000737", email = "21f1000737@ds.study.iitm.ac.in" }
]
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "python-dotenv>=1.0.0",
    "duckdb>=1.3.2",
    "fastapi>=0.116.1",
    "google-genai>=1.29.0",
    "gunicorn>=23.0.0",
    "lxml>=6.0.0",
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "openai>=1.99.6",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "playwright>=1.54.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "uvicorn>=0.35.0",
]

[project.scripts]
tds-project2-2025 = "tds_project2_2025:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
